--- a/src/scss/components/_workoutCard.scss
+++ b/src/scss/components/_workoutCard.scss
@@ -11,6 +11,7 @@
       display: flex;
       img {
         width: 2.4rem;
+        height: 100%;
       }
       span {
         margin-left: 0.4rem;
